--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ concurrency:
 
 on:
   workflow_dispatch: # manual trigger
+  push:
+    branches: ["main"]
   pull_request:
     branches:
       - main
