--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,12 +1,9 @@
-name: Publish Docs
+name: Publish
 
 env:
   node_version: 20
 
 on:
-  push:
-    branches: ["main"]
-
   workflow_dispatch: # manual trigger
 
 concurrency:
@@ -16,10 +13,6 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: ./docs
 
     steps:
       - name: Checkout
