--- a/package.json
+++ b/package.json
@@ -12,24 +12,19 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-<<<<<<< HEAD
-    "@nuxt/eslint": "^1.11.0",
-    "@nuxt/kit": "^4.2.1",
-    "@nuxt/ui": "^4.2.1",
-    "eslint": "^9.39.1",
-    "nuxt": "^4.2.1",
-    "tailwindcss": "^4.1.17",
-=======
-    "@nuxt/eslint": "^1.12.1",
+    "@iconify-json/lucide": "^1.2.81",
+    "@iconify-json/simple-icons": "^1.2.63",
     "@nuxt/kit": "^4.2.2",
     "@nuxt/ui": "^4.2.1",
-    "eslint": "^9.39.1",
     "nuxt": "^4.2.2",
     "tailwindcss": "^4.1.18",
->>>>>>> 630405a (chore(deps): bump packages)
     "typescript": "^5.9.3",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@nuxt/eslint": "^1.12.1",
+    "eslint": "^9.39.2"
   },
   "packageManager": "pnpm@10.25.0"
 }
